--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     ></script>
 </head>
 <body>
-<!-- Header -->
+<!-- Header Seok -->
     <header>
         <div class="logo">
         <i class ="fab fa-youtube"></i>
