--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     ></script>
 </head>
 <body>
-<!-- Header Seok -->
+<!-- Header Junseok 10:26PM -->
     <header>
         <div class="logo">
         <i class ="fab fa-youtube"></i>
@@ -24,7 +24,7 @@
         </div>
     </header> 
 
-<!-- Video Playyer 222-->
+<!-- Video Playyer -->
 <section class="player"> </section>
     <video controls src="https://www.youtube.com/watch?v=TXD1B_Gtgpg&t=425s"></video>
         <sction class="info"></sction>
