--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ,<!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -12,7 +12,7 @@
     ></script>
 </head>
 <body>
-<!-- Header Junseok 10:26PM -->
+<!-- Header -->
     <header>
         <div class="logo">
         <i class ="fab fa-youtube"></i>
@@ -59,18 +59,19 @@
                 <li>
                     <button><i class="fas fa-plus"></i><span>Save</span></button>
                 </li>
-                
                 <li>
                     <button><i class="fas fa-font-awesome-flag"></i><span>Report</span></button>
                 </li>
             </div>
+            <!-- Channel Description -->
             <div class="channel"></div>
                 <div class="matadate">
                     <img src="/image/avatar.png" alt=""/>
-                    <div class="info"><span class="name">11</span>
-                        <span class="subscribers">11</span></div>
+                    <div class="info">
+                        <span class="name">벌코</span>
+                        <span class="subscribers">subscribers</span></div>
                 </div>
-                <div class="subscribe"></div>
+                <button class="subscribe">subscribers</button>
         <section class="UpNext"></section>    
 </body>
 </html>
