low channel new cssfile

--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+    <link
+    href="https://fonts.google.com/specimen/Roboto"
+    rel="stylesheet"
+    />
     <title>Youtube Mobile</title>
     <script
     src="https://kit.fontawesome.com/2d323a629b.js"
@@ -72,6 +75,37 @@
                         <span class="subscribers">subscribers</span></div>
                 </div>
                 <button class="subscribe">subscribers</button>
-        <section class="UpNext"></section>    
+        <section class="UpNext">
+            <span class="title">Up next</span>
+            <ul>
+                <li class="item">
+                    <img src="image/avatar.png" alt="">
+                    <div class="imfo">
+                        <span class="title">벌코의 매드무비</span>
+                        <span- class="name">벌코</span->
+                        <span class="view">조회수 100k</span>
+                    </div>
+                    <button class="moreBtn"><i class ="fas fa-ellipasis-v"></i></button>
+                </li>
+                <li class="item">
+                    <img src="image/avatar.png" alt="">
+                    <div class="imfo">
+                        <span class="title">벌코의 매드무비2</span>
+                        <span- class="name">벌코</span->
+                        <span class="view">조회수 100k</span>
+                    </div>
+                    <button class="moreBtn"><i class ="fas fa-ellipasis-v"></i></button>
+                </li>
+                <li class="item">
+                    <img src="image/avatar.png" alt="">
+                    <div class="imfo">
+                        <span class="title">벌코의 매드무비3</span>
+                        <span- class="name">벌코</span->
+                        <span class="view">조회수 100k</span>
+                    </div>
+                    <button class="moreBtn"><i class ="fas fa-ellipasis-v"></i></button>
+                </li>
+            </ul>
+        </section>    
 </body>
 </html>
