--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-,<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="ko">
 <head>
     <meta charset="UTF-8">
@@ -8,6 +8,7 @@
     href="https://fonts.google.com/specimen/Roboto"
     rel="stylesheet"
     />
+    <link rel="stylesheet" href="style.css">
     <title>Youtube Mobile</title>
     <script
     src="https://kit.fontawesome.com/2d323a629b.js"
