--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
         <sction class="info"></sction>
             <div class="metadata"></div>
             <ul class="hashtags">
-                <li>#AA</li>
-                <li>#BB</li>
-                <li>#CC</li>
+                <li>#AAasdasdas</li>
+                <li>#BfafafafaB</li>
+                <li>#CbbbbbC</li>
             </ul>
             <div class="titleAndButton"></div>
             <span class="title">
@@ -49,7 +49,7 @@
             <div class="views">
                 <span class="views">1M views 1 moth ago</span>
             </div>
-            <!-- commit test -->
+            <!-- Actions -->
             <div class="actions">
                 <li>
                     <button><i class="fas fa-thumbs-up"></i><span>1K</span></button>
