--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
             </div>
             <!-- Channel Description -->
             <div class="channel"></div>
-                <div class="matadate">
-                    <img src="/image/avatar.png" alt=""/>
+                <div class="metadata">
+                    <img src="/image/avatar.png" >
                     <div class="info">
                         <span class="name">벌코</span>
                         <span class="subscribers">subscribers</span></div>
