--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     src="https://kit.fontawesome.com/2d323a629b.js"
     crossorigin="anonymous"
     ></script>
+    <script src= "main.js" defer></script>
 </head>
 <body>
 <!-- Header -->
@@ -40,7 +41,7 @@
                 <li>#CbbbbbC</li>
             </ul>
             <div class="titleAndButton"></div>
-            <span class="title">
+            <span class="title clamp">
                 클론코딩 유튜브 사이트 따라 만들기(HTML+CSS 연습편,
                 웹 포트폴리오) | 프론트엔드 개발자 입문편: HTML, CSS, Javascript
             </span>
